crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/020.cypher
MATCH (n:User {id: $id}) RETURN n; CALL apoc.cypher.doIt('MATCH (m) DELETE m')
